使用新的jsoncpp API，增加DAQ命名空间

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,8 @@ target_link_libraries(
 	${Boost_LIBRARIES}
 	)
 
+add_executable(single_test ./example/singlefile.cpp)
+target_link_libraries(single_test  sylar_log)
 add_executable(backtrace_test ./example/backtrace_test.cpp)
 target_link_libraries(backtrace_test sylar_log)
 add_executable(http_log_test ./example/httptest.cpp)
